fix fluid layout submenu spacing

--- a/assets/src/scss/layout/_header-with-submenu.scss
+++ b/assets/src/scss/layout/_header-with-submenu.scss
@@ -27,6 +27,11 @@
       padding-top: 0;
       width: 100%;
       align-items: center;
+
+      .container {
+        padding-left: fix-font-size-hack(1em);
+        padding-right: fix-font-size-hack(1em);
+      }
     }
 
     .menu {
